<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#808080"
    android:orientation="vertical"
    tools:context=".SettingsActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/settingsToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/status_bar_color"
        android:elevation="4dp"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:title="">

        <TextView
            android:id="@+id/settingsToolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/settings"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:id="@+id/settingsScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/settingsContentContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_model_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:orientation="horizontal"
                    android:visibility="visible">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="@string/model_input_size"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <ImageView
                        android:id="@+id/ivModelSize"
                        android:contentDescription="@string/model_input_size_arrow_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:src="@drawable/arrow_down" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_modelInputSize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <RadioGroup
                        android:id="@+id/radioGroupModelSize"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/rb640"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:text="@string/input_size_640"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            app:buttonTint="@color/blue" />

                        <RadioButton
                            android:id="@+id/rb1280"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:text="@string/input_size_1280"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            app:buttonTint="@color/blue" />

                        <RadioButton
                            android:id="@+id/rb1600"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:text="@string/input_size_1600"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            app:buttonTint="@color/blue" />

                        <RadioButton
                            android:id="@+id/rb2560"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:text="@string/input_size_2560"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            app:buttonTint="@color/blue" />
                    </RadioGroup>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_resolution"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:orientation="horizontal"
                    android:visibility="visible">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="@string/resolution"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <ImageView
                        android:id="@+id/ivResolution"
                        android:layout_width="0dp"
                        android:contentDescription="@string/resolution_arrow_button"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:src="@drawable/arrow_down" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_resol"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <RadioGroup
                        android:id="@+id/radioGroupResolution"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/rb1MP"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:text="@string/resolution_1MP"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            app:buttonTint="@color/blue" />

                        <RadioButton
                            android:id="@+id/rb2MP"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:text="@string/resolution_2MP"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            app:buttonTint="@color/blue" />

                        <RadioButton
                            android:id="@+id/rb4MP"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:text="@string/resolution_4MP"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            app:buttonTint="@color/blue" />

                        <RadioButton
                            android:id="@+id/rb8MP"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:text="@string/resolution_8MP"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            app:buttonTint="@color/blue" />
                    </RadioGroup>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <!-- ...existing code... -->

            <androidx.cardview.widget.CardView
                android:id="@+id/cardAbout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <LinearLayout
                        android:id="@+id/aboutHeader"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:text="@string/about"
                            android:textColor="#000000"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:id="@+id/ivAbout"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:contentDescription="@string/expand_about"
                            android:src="@drawable/arrow_down" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/llAbout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingTop="12dp"
                        android:visibility="gone">

                        <TextView
                            android:id="@+id/tvSdkVersion"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="#444444"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/tvBarcodeDecoderVersion"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:textColor="#444444"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/tvTextOcrVersion"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:textColor="#444444"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/tvModuleRecognizerVersion"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:textColor="#444444"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/tvPalletBoxLocalizerVersion"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:textColor="#444444"
                            android:textSize="14sp" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </ScrollView>

</LinearLayout>